# yammy-vst

./: .gitignore  CMakeLists.txt  WHAMMY_RESEARCH.md
.github/workflows/: build-and-release.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: PitchShifter.cpp  PitchShifter.h
Source/UI/: StyleSheet.h
